--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -23,7 +23,7 @@ import LinkIcon from "./icons-components/LinkIcon.astro";
     </p>
     <div class="overflow-hidden duration-[2s] rounded-xl">
       <img
-        src="/project2.webp"
+        src="/Portfolio/project2.webp"
         alt="imagen proyecto"
         class="w-[100%] hover:scale-105 transition-transform"
       />
