--- a/src/components/Presentacion.astro
+++ b/src/components/Presentacion.astro
@@ -10,7 +10,7 @@ import FileIcon from "./icons-components/FileIcon.astro";
   id="presentacion"
   class="h-screen flex items-center mx-[200px] gap-x-16"
 >
-  <img src="/Portfolio/picture.webp" alt="" class="w-64" />
+  <img src="Portfolio/picture.webp" alt="" class="w-64" />
   <div class="flex flex-col gap-5 text-slate-50">
     <h1 class="w-fit text-5xl font-bold">
       Buenas, soy <span class="text-fade">Alberto Marian</span>
