--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -63,7 +63,7 @@ import LinkIcon from "./icons-components/LinkIcon.astro";
     </p>
     <div class="overflow-hidden duration-[2s] rounded-xl">
       <img
-        src="/project1.webp"
+        src="/Portfolio//project1.webp"
         alt="imagen proyecto"
         class="w-[100%] hover:scale-105 transition-transform"
       />
