--- a/src/components/Habilidades.astro
+++ b/src/components/Habilidades.astro
@@ -4,49 +4,49 @@
 >
   <div class="flex flex-row gap-12">
     <div class="flex flex-col items-center gap-4">
-      <img src="/javascript.svg" alt="" class="svg" />
+      <img src="/Portfolio//javascript.svg" alt="" class="svg" />
       <span
         class="px-4 py-[2px] rounded-2xl border-[#f0db4f] border-2 bg-[#f0da4f82]"
         >JavaScript</span
       >
     </div>
     <div class="flex flex-col items-center gap-4">
-      <img src="/typescript.svg" alt="" class="svg" />
+      <img src="/Portfolio//typescript.svg" alt="" class="svg" />
       <span
         class="px-4 py-[2px] rounded-2xl border-[#3178c6] border-2 bg-[#3178c682]"
         >TypeScript</span
       >
     </div>
     <div class="flex flex-col items-center gap-4">
-      <img src="/html5.svg" alt="" class="svg" />
+      <img src="/Portfolio//html5.svg" alt="" class="svg" />
       <span
         class="px-4 py-[2px] rounded-2xl border-[#e34f26] border-2 bg-[#e34f2682]"
         >Html</span
       >
     </div>
     <div class="flex flex-col items-center gap-4">
-      <img src="/css.svg" alt="" class="svg" />
+      <img src="/Portfolio//css.svg" alt="" class="svg" />
       <span
         class="px-4 py-[2px] rounded-2xl border-[#663399] border-2 bg-[#66339982]"
         >Css</span
       >
     </div>
     <div class="flex flex-col items-center gap-4">
-      <img src="/python.svg" alt="" class="svg" />
+      <img src="/Portfolio//python.svg" alt="" class="svg" />
       <span
         class="px-4 py-[2px] rounded-2xl border-[#ffd94b] border-2 bg-[#ffd94b82]"
         >Python</span
       >
     </div>
     <div class="flex flex-col items-center gap-4">
-      <img src="/kotlin.svg" alt="" class="svg" />
+      <img src="/Portfolio//kotlin.svg" alt="" class="svg" />
       <span
         class="px-4 py-[2px] rounded-2xl border-[#cb19cd] border-2 bg-[#cb19cd82]"
         >Kotlin</span
       >
     </div>
     <div class="flex flex-col items-center gap-4">
-      <img src="/java.svg" alt="" class="svg" />
+      <img src="/Portfolio//java.svg" alt="" class="svg" />
       <span
         class="px-4 py-[2px] rounded-2xl border-[#5382a1] border-2 bg-[#5382a182]"
         >Java</span
@@ -55,56 +55,56 @@
   </div>
   <div class="flex flex-row gap-12">
     <div class="flex flex-col items-center gap-4">
-      <img src="/astro_dark.svg" alt="" class="svg" />
+      <img src="/Portfolio//astro_dark.svg" alt="" class="svg" />
       <span
         class="px-4 py-[2px] rounded-2xl border-[#ff5d01] border-2 bg-[#ff5d0182]"
         >Astro</span
       >
     </div>
     <div class="flex flex-col items-center gap-4">
-      <img src="/angular.svg" alt="" class="svg" />
+      <img src="/Portfolio//angular.svg" alt="" class="svg" />
       <span
         class="px-4 py-[2px] rounded-2xl border-[#f4094d] border-2 bg-[#f4094d82]"
         >Angular</span
       >
     </div>
     <div class="flex flex-col items-center gap-4">
-      <img src="/tailwindcss.svg" alt="" class="svg" />
+      <img src="/Portfolio//tailwindcss.svg" alt="" class="svg" />
       <span
         class="px-4 py-[2px] rounded-2xl border-[#38bdf8] border-2 bg-[#38bdf882]"
         >Tailwind</span
       >
     </div>
     <div class="flex flex-col items-center gap-4">
-      <img src="/flask-dark.svg" alt="" class="svg" />
+      <img src="/Portfolio//flask-dark.svg" alt="" class="svg" />
       <span
         class="px-4 py-[2px] rounded-2xl border-[#8c8f94] border-2 bg-[#8c8f9482]"
         >Flask</span
       >
     </div>
     <div class="flex flex-col items-center gap-4">
-      <img src="/django.svg" alt="" class="svg" />
+      <img src="/Portfolio//django.svg" alt="" class="svg" />
       <span
         class="px-4 py-[2px] rounded-2xl border-[#44b78b] border-2 bg-[#44b78b82]"
         >Django</span
       >
     </div>
     <div class="flex flex-col items-center gap-4">
-      <img src="/mysql.svg" alt="" class="svg" />
+      <img src="/Portfolio//mysql.svg" alt="" class="svg" />
       <span
         class="px-4 py-[2px] rounded-2xl border-[#00546b] border-2 bg-[#00546b82]"
         >MySQL</span
       >
     </div>
     <div class="flex flex-col items-center gap-4">
-      <img src="/github-dark.svg" alt="" class="svg" />
+      <img src="/Portfolio//github-dark.svg" alt="" class="svg" />
       <span
         class="px-4 py-[2px] rounded-2xl border-[#8c8f94] border-2 bg-[#8c8f9482]"
         >Github</span
       >
     </div>
     <div class="flex flex-col items-center gap-4">
-      <img src="/git.svg" alt="" class="svg" />
+      <img src="/Portfolio//git.svg" alt="" class="svg" />
       <span
         class="px-4 py-[2px] rounded-2xl border-[#de4c36] border-2 bg-[#de4c3682]"
         >Git</span
