--- a/src/components/Presentacion.astro
+++ b/src/components/Presentacion.astro
@@ -24,7 +24,7 @@ import FileIcon from "./icons-components/FileIcon.astro";
         class="w-fit px-4 py-[2px] flex items-center gap-2 text-green-200 rounded-2xl border-green-500 border-2 bg-green-500 bg-opacity-60"
       >
         <BriefcaseIcon />
-        Buscando prácticas</span
+        En prácticas</span
       >
       <a
         href="/CV_alberto_marian.pdf"
