--- a/src/components/Presentacion.astro
+++ b/src/components/Presentacion.astro
@@ -27,8 +27,8 @@ import FileIcon from "./icons-components/FileIcon.astro";
         En prácticas</span
       >
       <a
-        href=""
-        download="/CV_alberto_marian.pdf"
+        href="public/CV_alberto_marian.pdf"
+        download="CV_alberto_marian.pdf"
         class="w-fit px-4 py-[2px] flex items-center gap-2 text-red-200 rounded-2xl border-red-500 border-2 bg-red-500 bg-opacity-60 duration-200 hover:bg-red-500"
       >
         <FileIcon />
