--- a/src/components/Presentacion.astro
+++ b/src/components/Presentacion.astro
@@ -32,7 +32,7 @@ import FileIcon from "./icons-components/FileIcon.astro";
         class="w-fit px-4 py-[2px] flex items-center gap-2 text-red-200 rounded-2xl border-red-500 border-2 bg-red-500 bg-opacity-60 duration-200 hover:bg-red-500"
       >
         <FileIcon />
-        Descargar CV 2</a
+        Descargar CV</a
       >
     </div>
     <div class="flex gap-5">
