--- a/src/components/Habilidades.astro
+++ b/src/components/Habilidades.astro
@@ -1,6 +1,6 @@
 <section
   id="habilidades"
-  class="relative h-screen flex flex-col items-center justify-center gap-12 text-slate-50 text-sm"
+  class="relative h-screen flex flex-col items-center justify-center gap-12 text-slate-50 text-sm snap-start"
 >
   <div class="flex flex-row gap-12">
     <div class="flex flex-col items-center gap-4">
@@ -61,13 +61,7 @@
         >Astro</span
       >
     </div>
-    <div class="flex flex-col items-center gap-4">
-      <img src="/Portfolio//angular.svg" alt="" class="svg" />
-      <span
-        class="px-4 py-[2px] rounded-2xl border-[#f4094d] border-2 bg-[#f4094d82]"
-        >Angular</span
-      >
-    </div>
+
     <div class="flex flex-col items-center gap-4">
       <img src="/Portfolio//tailwindcss.svg" alt="" class="svg" />
       <span
@@ -83,12 +77,13 @@
       >
     </div>
     <div class="flex flex-col items-center gap-4">
-      <img src="/Portfolio//django.svg" alt="" class="svg" />
+      <img src="/Portfolio//spring.svg" alt="" class="svg" />
       <span
-        class="px-4 py-[2px] rounded-2xl border-[#44b78b] border-2 bg-[#44b78b82]"
-        >Django</span
+        class="px-4 py-[2px] rounded-2xl border-[#68bd45] border-2 bg-[#68bd4582]"
+        >SpringBoot</span
       >
     </div>
+
     <div class="flex flex-col items-center gap-4">
       <img src="/Portfolio//mysql.svg" alt="" class="svg" />
       <span
@@ -97,17 +92,10 @@
       >
     </div>
     <div class="flex flex-col items-center gap-4">
-      <img src="/Portfolio//github-dark.svg" alt="" class="svg" />
+      <img src="/Portfolio//supabase.svg" alt="" class="svg" />
       <span
-        class="px-4 py-[2px] rounded-2xl border-[#8c8f94] border-2 bg-[#8c8f9482]"
-        >Github</span
-      >
-    </div>
-    <div class="flex flex-col items-center gap-4">
-      <img src="/Portfolio//git.svg" alt="" class="svg" />
-      <span
-        class="px-4 py-[2px] rounded-2xl border-[#de4c36] border-2 bg-[#de4c3682]"
-        >Git</span
+        class="px-4 py-[2px] rounded-2xl border-[#3ecf8e] border-2 bg-[#3ecf8e82]"
+        >Supabase</span
       >
     </div>
   </div>
