--- a/src/components/Presentacion.astro
+++ b/src/components/Presentacion.astro
@@ -8,27 +8,27 @@ import FileIcon from "./icons-components/FileIcon.astro";
 
 <section
   id="presentacion"
-  class="h-screen flex items-center mx-[200px] gap-x-16"
+  class="h-screen flex items-center mx-[200px] gap-x-16 snap-start"
 >
   <img src="/Portfolio/picture.webp" alt="" class="w-64" />
   <div class="flex flex-col gap-5 text-slate-50">
     <h1 class="w-fit text-5xl font-bold">
-      Buenas, soy <span class="text-fade">Alberto Marian</span>
+      Hola, soy <span class="text-fade">Alberto Marian</span>
     </h1>
     <p class="w-[85%] text-lg text-pretty">
-      Actualmente estudiando Desarrollo de Aplicaciones Multiplataforma(DAM) en
-      busca de una oportunidad de comenzar en el mundo laboral.
+      Graduado en Desarrollo de Aplicaciones Multiplataforma(DAM) en busca de
+      una oportunidad de comenzar en el mundo laboral.
     </p>
     <div class="flex gap-4">
       <span
         class="w-fit px-4 py-[2px] flex items-center gap-2 text-green-200 rounded-2xl border-green-500 border-2 bg-green-500 bg-opacity-60"
       >
         <BriefcaseIcon />
-        En prácticas</span
+        Buscando trabajo</span
       >
       <a
         href="/Portfolio/CV_alberto_marian.pdf"
-        download="CV_alberto_marian.pdf"
+        download="Alberto_Marian.pdf"
         class="w-fit px-4 py-[2px] flex items-center gap-2 text-red-200 rounded-2xl border-red-500 border-2 bg-red-500 bg-opacity-60 duration-200 hover:bg-red-500"
       >
         <FileIcon />
