--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/webp" href="/public/picture.webp" />
     <meta name="generator" content={Astro.generator} />
     <title>Alberto Marian</title>
   </head>
@@ -13,7 +13,11 @@
 </html>
 
 <style>
-  html,
+  html {
+    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+  }
+
   body {
     display: flex;
     flex-direction: column;
@@ -21,5 +25,6 @@
     justify-content: center;
     background-color: #1a1f29;
     margin: 0;
+    scroll-snap-type: y mandatory;
   }
 </style>
