enlaces imagenes arreglados

--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -26,7 +26,7 @@ import VideoModal from "./VideoModal.astro";
       class="overflow-hidden duration-[2s] rounded-xl cursor-pointer"
       id="openModal1"
     >
-      <img src="../../public/project1.png" alt="App Veterinario" />
+      <img src="project1.png" alt="App Veterinario" />
     </div>
     <div class="flex justify-between items-center w-[100%] text-sm">
       <div class="flex gap-2">
@@ -73,7 +73,7 @@ import VideoModal from "./VideoModal.astro";
       class="overflow-hidden duration-[2s] rounded-xl cursor-pointer"
       id="openModal2"
     >
-      <img src="../../public/project2.png" height="100px" alt="QrLocker" />
+      <img src="project2.png" alt="QrLocker" />
     </div>
     <div class="flex justify-between items-center w-[100%] text-sm">
       <div class="flex gap-2">
@@ -98,8 +98,8 @@ import VideoModal from "./VideoModal.astro";
   </div>
 </section>
 
-<VideoModal id="modal1" videoSrc="public/project1_video.mp4" />
-<VideoModal id="modal2" videoSrc="public/project2_video.mp4" />
+<VideoModal id="modal1" videoSrc="project1_video.mp4" />
+<VideoModal id="modal2" videoSrc="project2_video.mp4" />
 
 <script>
   const openModal1 = document.getElementById("openModal1");
