--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/webp" href="/public/picture.webp" />
+    <link rel="icon" type="image/webp" href="picture.webp" />
     <meta name="generator" content={Astro.generator} />
     <title>Alberto Marian</title>
   </head>
