--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -26,7 +26,7 @@ import VideoModal from "./VideoModal.astro";
       class="overflow-hidden duration-[2s] rounded-xl cursor-pointer"
       id="openModal1"
     >
-      <img src="project1.png" alt="App Veterinario" />
+      <img src="project1.png" class="" alt="App Veterinario" />
     </div>
     <div class="flex justify-between items-center w-[100%] text-sm">
       <div class="flex gap-2">
